--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -26,4 +26,4 @@ jobs:
           body: 'Changes were made to the repository on branch: ${{github.ref_name}}.'
           to: practica-tic@outlook.com
           from: practica-tic@outlook.com
-          secure: true # set to false if your SMTP server doesn't require SSL/TLS
+          secure: false # set to false if your SMTP server doesn't require SSL/TLS
