--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -19,11 +19,11 @@ jobs:
         uses: dawidd6/action-send-mail@v3
         with:
           server_address: smtp.office365.com
-          server_port: 587
+          server_port: 25
           username: ${{secrets.SMTP_EMAIL}}
           password: ${{secrets.SMTP_PASSWORD}}
           subject: 'Repository Change Notification'
           body: 'Changes were made to the repository on branch: ${{github.ref_name}}.'
           to: practica-tic@outlook.com
           from: practica-tic@outlook.com
-          secure: false # set to false if your SMTP server doesn't require SSL/TLS
+          secure: true # set to false if your SMTP server doesn't require SSL/TLS
