Fix GitHub Action 'Notify on Repository Changes': secure is set to true and server_address is set to smtp.gmail.com

--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -18,12 +18,12 @@ jobs:
       - name: Send Email Notification
         uses: dawidd6/action-send-mail@v3
         with:
-          server_address: smtp-mail.outlook.com
-          server_port: 587
+          server_address: smtp.gmail.com
+          server_port: 25
           username: ${{secrets.SMTP_EMAIL}}
           password: ${{secrets.SMTP_PASSWORD}}
           subject: 'Repository Change Notification'
           body: 'Changes were made to the repository on branch: ${{github.ref_name}}.'
-          to: practica-tic@outlook.com
-          from: practica-tic@outlook.com
-          secure: false # set to false if your SMTP server doesn't require SSL/TLS
+          to: romero.iteso@gmail.com
+          from: romero.iteso@gmail.com
+          secure: true # set to false if your SMTP server doesn't require SSL/TLS
