--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -24,6 +24,6 @@ jobs:
           password: ${{secrets.SMTP_PASSWORD}}
           subject: 'Repository Change Notification'
           body: 'Changes were made to the repository on branch: ${{github.ref_name}}.'
-          to: romero.iteso@gmail.com
+          to: nicocesar60@gmail.com
           from: romero.iteso@gmail.com
           secure: false # set to false if your SMTP server doesn't require SSL/TLS
